// Export all generated gRPC types and services
export type {
  VehicleLocationRequest,
  VehicleLocationReply,
  VehicleLocation,
  VehicleLocationService,
  VehicleLocationServiceClientImpl,
} from './generated/vehicle-location';

export type {
  NearbyStopsRequest,
  NearbyStopsReply,
  NearbyStopsService,
  NearbyStopsServiceClientImpl,
} from './generated/nearby-stops';

export type {
  LikePostRequest,
  LikePostReply,
  PostLikeService,
  PostLikeServiceClientImpl,
} from './generated/post-like';

// export type {
//   UserFollowRequest,
//   UserFollowReply,
//   UserFollowService,
//   UserFollowServiceClientImpl,
// } from './generated/user-follow';
